--- a/pom.xml
+++ b/pom.xml
@@ -12,7 +12,7 @@
 	<artifactId>appBlogs</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<name>appBlogs</name>
-	<description>Demo project for Spring Boot</description>
+	<description>A blog app that displays a feed of posts</description>
 
 	<properties>
 		<java.version>11</java.version>
@@ -31,10 +31,14 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-web</artifactId>
 		</dependency>
-
 		<dependency>
 			<groupId>org.hsqldb</groupId>
 			<artifactId>hsqldb</artifactId>
+			<scope>runtime</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.postgresql</groupId>
+			<artifactId>postgresql</artifactId>
 			<scope>runtime</scope>
 		</dependency>
 		<dependency>
