- added two profiles data bases in properties

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,16 +2,30 @@
 server.port=5050
 server.servlet.context-path=/
 
-# JPA
-spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialect
+# JPA Postgres
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.generate-ddl=false
 
+
+
 # Datasource
-spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
-spring.datasource.driver-class-name=org.postgresql.Driver
-spring.datasource.username=postgres
-spring.datasource.password=5Qt-12-zzt-1
 spring.datasource.continue-on-error=true
+
+#Postgres
+#spring.datasource.driver-class-name=org.postgresql.Driver
+#spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
+#spring.datasource.username=postgres
+#spring.datasource.password=5Qt-12-zzt-1
+
+
+#HSQL
+spring.datasource.driver-class-name=org.hsqldb.jdbc.JDBCDriver
+spring.datasource.url=jdbc:hsqldb:mem:testdb;DB_CLOSE_DELAY=-1
+spring.datasource.username=sa
+spring.datasource.password=
+
+
+
+
