- added comments in properties.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,19 +8,21 @@ spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.generate-ddl=false
 
-
-
 # Datasource
 spring.datasource.continue-on-error=true
 
-#Postgres
+
+#If you want to use postgresql database
+#uncomment profile 1 block and comment profile 2 block
+
+#profile 1 - Postgres
 #spring.datasource.driver-class-name=org.postgresql.Driver
 #spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
 #spring.datasource.username=postgres
 #spring.datasource.password=5Qt-12-zzt-1
 
 
-#HSQL
+#profile 2 - HSQL
 spring.datasource.driver-class-name=org.hsqldb.jdbc.JDBCDriver
 spring.datasource.url=jdbc:hsqldb:mem:testdb;DB_CLOSE_DELAY=-1
 spring.datasource.username=sa
