--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 #server
-server.port=5050
+server.port=8080
 server.servlet.context-path=/
 
 # JPA Postgres
@@ -19,7 +19,7 @@ spring.datasource.continue-on-error=true
 #spring.datasource.driver-class-name=org.postgresql.Driver
 #spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
 #spring.datasource.username=postgres
-#spring.datasource.password=5Qt-12-zzt-1
+#spring.datasource.password=postgres
 
 
 #profile 2 - HSQL
